--- a/code-screeshot/package.json
+++ b/code-screeshot/package.json
@@ -1,7 +1,7 @@
 {
   "name": "code-screenshot",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
